Nagios: check mysql status

--- a/etc/nagios3/conf.d/timeperiods.cfg
+++ b/etc/nagios3/conf.d/timeperiods.cfg
@@ -47,18 +47,13 @@ define timeperiod{
         alias           Never
         }
 
-# When backup is not scheduled
+# Other timeperiods
+{% for timeperiod, params in pillar.get('nagios', {}).get('timeperiods', {})|dictsort -%}
 define timeperiod{
-        timeperiod_name not_during_dbbackup
-        alias           Not during DB Backup
-        sunday          00:00-07:00,08:05-24:00
-        monday          00:00-07:00,08:05-24:00
-        tuesday         00:00-07:00,08:05-24:00
-        wednesday       00:00-07:00,08:05-24:00
-        thursday        00:00-07:00,08:05-24:00
-        friday          00:00-07:00,08:05-24:00
-        saturday        00:00-07:00,08:05-24:00
-        sunday          00:00-07:00,08:05-24:00
-        }
-
+        timeperiod_name {{timeperiod}}
+        {% for key, val in params|dictsort -%}
+        {{key.ljust(15)}} {{val}}
+        {% endfor %}
+}
+{% endfor %}
 # end of file
