nagios: check web pages

--- a/etc/nagios3/conf.d/hosts.cfg
+++ b/etc/nagios3/conf.d/hosts.cfg
@@ -69,3 +69,12 @@ define host {
 {% endif -%}
 {% endfor -%}
 {% endfor -%}
+{% for host, params in pillar.get('nagios', {}).get('hosts', {})|dictsort -%}
+define host {
+    use                            generic-host
+    host_name                      {{host}}
+    {% for key, val in params|dictsort -%}
+    {{key.ljust(30)}} {{val}}
+    {% endfor %}
+}
+{% endfor -%}
