nagios: add celery, rackspace monitoring

--- a/etc/nagios/nrpe.cfg
+++ b/etc/nagios/nrpe.cfg
@@ -1,4 +1,4 @@
-{% set cfg = pillar.get('nagios-nrpe', {}).get('cfg', {}) %}
+{% set cfg = pillar.get('nagios-nrpe', {}) %}
 #############################################################################
 # Configuration file for the NRPE daemon.  It needs to be
 # located on the remote host that is running the NRPE daemon, not the host
@@ -51,7 +51,7 @@ nrpe_group=nagios
 # you are running this daemon on.
 #
 # NOTE: This option is ignored if NRPE is running under either inetd or xinetd
-allowed_hosts={{ cfg.get('hosts', '127.0.0.1') }}
+allowed_hosts={{ cfg.get('calling_hosts', '127.0.0.1') }}
 
 # COMMAND ARGUMENT PROCESSING
 # This option determines whether or not the NRPE daemon will allow clients
