--- a/etc/nagios/nrpe_local.cfg
+++ b/etc/nagios/nrpe_local.cfg
@@ -1,17 +1,31 @@
 {% set monitor = pillar.get('lxc_hosts', {}).get(grains['fqdn'], {}).get('monitor', {}) -%}
+
 {% set primary_disk = monitor.get('primary_disk', {}) -%}
 {% if primary_disk -%}
 command[check_disk0]=/usr/lib/nagios/plugins/check_disk -w {{primary_disk.warn_at}} -c {{primary_disk.critical_at}} -p {{primary_disk.mount}}
 {% endif -%}
+
 {% set procs = monitor.get('procs', {}) -%}
 {% if procs -%}
 command[check_my_procs]=/usr/lib/nagios/plugins/check_procs -w {{procs.warn_at}} -c {{procs.critical_at}}
 {% endif -%}
+
 {% set users = monitor.get('users', {}) -%}
 {% if users -%}
 command[check_my_users]=/usr/lib/nagios/plugins/check_users -w {{users.warn_at}} -c {{users.critical_at}}
 {% endif -%}
-{% set commands = pillar.get('nagios-nrpe', {}).get('cfg', {}).get('commands', {}) -%}
+
+{% set celery = pillar.get('nagios-nrpe', {}).get('celery', {}).get(grains['fqdn'], {}) -%}
+{% if celery -%}
+command[check_celeryd]=/usr/lib/nagios/plugins/check_procs -w {{celery.threads}}:{{celery.threads}} -c 0:{{celery.threads}} --ereg-argument-array 'manage.py[ ]celeryd'
+{% if celery.get('celerybeat', False) -%}
+command[check_celerybeat]=/usr/lib/nagios/plugins/check_procs -w 1:1 -c 0:1 --ereg-argument-array 'manage.py[ ]celerybeat'
+{% else -%}
+command[check_no_celerybeat]=/usr/lib/nagios/plugins/check_procs -w 0:0 -c 0:0 --ereg-argument-array 'manage.py[ ]celerybeat'
+{% endif -%}
+{% endif -%}
+
+{% set commands = pillar.get('nagios-nrpe', {}).get('commands', {}) -%}
 {% for name, cmd in commands|dictsort -%}
 command[{{name}}]={{cmd}}
 {% endfor -%}
