nagios: trim out container eth0 interfaces, better icons

--- a/etc/nagios3/conf.d/hostgroups.cfg
+++ b/etc/nagios3/conf.d/hostgroups.cfg
@@ -1,12 +1,16 @@
 # HOSTGROUPS (auto-generated)
-{% for lxc_host, lxc_params in pillar.get('lxc_hosts', {})|dictsort %}
+{% for lxc_host, lxc_params in pillar.get('lxc_hosts', {})|dictsort -%}
 define hostgroup {
     hostgroup_name                 {{lxc_host}}-local
     alias                          Hosts on the {{lxc_host}} bridge network
+    {% if lxc_host == 'ca3' -%}
     members                        {{lxc_host}}-eth0,
                                    {%- for container in lxc_params.get('containers', {}) -%}
                                    {{container}}-eth0{% if not loop.last %}, {% endif -%}
                                    {%- endfor %}
+    {% else -%}
+    members                        {{lxc_host}}-eth0
+    {% endif -%}
 }
 
 define hostgroup {
@@ -17,7 +21,7 @@ define hostgroup {
                                    {%- endif -%}
                                    {%- for container, interfaces in lxc_params.get('containers', {})|dictsort %}
                                    {%- if 'tun0' in interfaces -%}
-                                   {{container}}-tun0{% if not loop.last %}, {% endif -%}
+                                   {{container}}{% if not loop.last %}, {% endif -%}
                                    {%- endif -%}
                                    {%- endfor %}
 }
