--- a/etc/nagios3/conf.d/hosts.cfg
+++ b/etc/nagios3/conf.d/hosts.cfg
@@ -26,8 +26,8 @@ define host {
     use                            generic-host
     host_name                      {{lxc_host}}-eth0
     alias                          {{lxc_host}}-eth0
-    icon_image                     andrade/Compaq_pc_EXD.png
-    statusmap_image                andrade/Compaq_pc_EXDp.png
+    icon_image                     cook/linux_server.gif
+    statusmap_image                cook/linux_server.gd2
     address                        {{lxc_params['eth0']}}
 }
 {% endif -%}
@@ -36,34 +36,34 @@ define host {
     use                            generic-host
     host_name                      {{lxc_host}}-tun0
     alias                          {{lxc_host}}-tun0
-    parents                        vpn.iso-tun0
-    icon_image                     andrade/Compaq_pc_EXD.png
-    statusmap_image                andrade/Compaq_pc_EXDp.png
+    parents                        vpn.iso
+    icon_image                     cook/linux_server.gif
+    statusmap_image                cook/linux_server.gd2
     address                        {{lxc_params['tun0']}}
 }
 {% endif -%}
 {% for container, interfaces in lxc_params.get('containers', {})|dictsort -%}
-{% if 'eth0' in interfaces %}
+{% if 'eth0' in interfaces and lxc_host == 'ca3' %}
 define host {
     use                            generic-host
     host_name                      {{container}}-eth0
     alias                          {{container}}-eth0
     parents                        {{lxc_host}}-eth0
-    icon_image                     andrade/HPdj2200.png
-    statusmap_image                andrade/HPdj2200p.png
+    icon_image                     cook/linux_pc.gif
+    statusmap_image                cook/linux_pc.gd2
     address                        {{interfaces['eth0']}}
 }
 {% endif -%}
 {% if 'tun0' in interfaces %}
 define host {
     use                            generic-host
-    host_name                      {{container}}-tun0
-    alias                          {{container}}-tun0
+    host_name                      {{container}}
+    alias                          {{container}}
     {% if container != 'vpn.iso' -%}
-    parents                        {% if 'tun0' in lxc_params %}{{lxc_host}}-tun0{% else %}vpn.iso-tun0{% endif %}
+    parents                        {% if 'tun0' in lxc_params %}{{lxc_host}}-tun0{% else %}vpn.iso{% endif %}
     {%- endif %}
-    icon_image                     andrade/HPdj2200.png
-    statusmap_image                andrade/HPdj2200p.png
+    icon_image                     cook/linux_pc.gif
+    statusmap_image                cook/linux_pc.gd2
     address                        {{interfaces['tun0']}}
 }
 {% endif -%}
