nagios: Turn on notifications

--- a/etc/nagios3/conf.d/services.cfg
+++ b/etc/nagios3/conf.d/services.cfg
@@ -20,7 +20,7 @@ define service {
     normal_check_interval          5
     retry_check_interval           1
     max_check_attempts             4
-    notification_period            never   ; Change to 24x7 once in production
+    notification_period            24x7
     notification_options           w,u,c,r
     contact_groups                 admins
     register                       0       ; DONT REGISTER THIS DEFINITION - ITS NOT A REAL SERVICE, JUST A TEMPLATE!
