--- a/etc/nagios/nrpe_local.cfg
+++ b/etc/nagios/nrpe_local.cfg
@@ -1,4 +1,4 @@
-{% set monitor = pillar.get('lxc_hosts', {}).get(grains['fqdn'], {}).get('monitor', {}) -%}
+{% set monitor = pillar.get('nagios-nrpe', {}).get('monitor', {}).get(grains['fqdn'], {}) -%}
 
 {% set primary_disk = monitor.get('primary_disk', {}) -%}
 {% if primary_disk -%}
@@ -15,7 +15,7 @@ command[check_my_procs]=/usr/lib/nagios/plugins/check_procs -w {{procs.warn_at}}
 command[check_my_users]=/usr/lib/nagios/plugins/check_users -w {{users.warn_at}} -c {{users.critical_at}}
 {% endif -%}
 
-{% set celery = pillar.get('nagios-nrpe', {}).get('celery', {}).get(grains['fqdn'], {}) -%}
+{% set celery = monitor.get('celery', {}) -%}
 {% if celery -%}
 command[check_celeryd]=/usr/lib/nagios/plugins/check_procs -w {{celery.threads}}:{{celery.threads}} -c 0:{{celery.threads}} --ereg-argument-array 'manage.py[ ]celeryd'
 {% if celery.get('celerybeat', False) -%}
@@ -25,7 +25,7 @@ command[check_no_celerybeat]=/usr/lib/nagios/plugins/check_procs -w 0:0 -c 0:0 -
 {% endif -%}
 {% endif -%}
 
-{% set commands = pillar.get('nagios-nrpe', {}).get('commands', {}) -%}
+{% set commands = pillar.get('nagios-nrpe', {}).get('global_commands', {}) -%}
 {% for name, cmd in commands|dictsort -%}
 command[{{name}}]={{cmd}}
 {% endfor -%}
